--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -32,6 +32,7 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
     </div>
     {% unless page.header.overlay_color or page.header.overlay_image %} {%
     endunless %} {{ content }}
+    {% include footerForm.html %}
     <div class="link-to">
       <a
         href="https://github.com/im-wiki/im-wiki.github.io/edit/main/_pages/{{ page.permalink }}.md"
@@ -45,5 +46,6 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
         Группа волонтеров
       </a>
     </div>
+    
   </div>
 </div>
